examples/errors/duplicate_class_method3.ik
fn size(b Bool) Int:
    return 1

type Sized class:
    fn size(Self) Int

fn main():
    print("Hello\n")
